# sss-captain-report

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: args.rs  error.rs  main.rs  parser.rs
src/content/: chart.rs  draught.rs  mod.rs  parameters.rs
src/content/displacement/: bulk_cargo.rs  bulkhead.rs  cargo.rs  container.rs  mod.rs  tank.rs
src/content/general/: itinerary.rs  mod.rs  ship.rs  voyage.rs
src/content/misc/: table.rs
src/content/stability/: chart.rs  criterion.rs  draught.rs  lever_diagram.rs  mod.rs  parameters.rs
src/content/strength/: chart.rs  mod.rs  table.rs  template.rs
src/converter/: comrak_convert.rs  mod.rs
src/db/: api_server.rs  bulk_cargo.rs  bulkhead.rs  cargo.rs  container.rs  criterion.rs  itinerary.rs  mod.rs  parameters.rs  ship.rs  tank.rs  voyage.rs
src/formatter/: title.rs
