[package]
name = "sss-captain-report"
version = "0.1.0"
edition = "2021"

[dependencies]
testing = { git = "https://github.com/a-givertzman/rust-testing.git", version = "0.1.1" }
debugging = { git = "https://github.com/a-givertzman/rust-debuging.git", version = "0.0.1" }
api-tools = { git = "https://github.com/a-givertzman/rust-api-tools.git", tag = "0.2.0" }

log = "^0.4"
env_logger = "^0.11"
thiserror = "1.0.57"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
chrono = "0.4.38"
splines = "4.3.1"
charts-rs = "0.3.19"

#
# Collections
indexmap = "^2.7"
#
# Regex
regex = "^1.11"
#
# Md
markdown = "1.0.0-alpha.21"
comrak = "^0.32"
#
# Images
image = "^0.25"
base64 = "^0.22"
